--- a/extension/index.html
+++ b/extension/index.html
@@ -71,7 +71,7 @@
             <img id="copy-icon" src="https://img.icons8.com/ios-filled/50/ffffff/copy.png" alt="Copy Icon">
         </div>
         <br>
-        <p id="output">This is some example text that you can copy.</p>
+        <p id="output">This Where the summary will be generated</p>
     
         <script src="app.js"></script>
         <script src="copyScript.js"></script>
