--- a/extension/index.html
+++ b/extension/index.html
@@ -61,6 +61,12 @@
                 margin-left: 5px;
                 cursor: pointer;
             }
+
+            #link_ele{
+                padding: 25px;
+                font-size: 18px;
+                color: #61dafb;
+            }
         </style>
     </head>
     <body>
@@ -71,7 +77,8 @@
             <img id="copy-icon" src="https://img.icons8.com/ios-filled/50/ffffff/copy.png" alt="Copy Icon">
         </div>
         <br>
-        <p id="output">This Where the summary will be generated</p>
+        <p id="output">This is Where the summary will be generated</p>
+        <a id="link_ele" href=""></a>
     
         <script src="app.js"></script>
         <script src="copyScript.js"></script>
